      o the standard Jena readers generate startRead and finishRead events
      o all the Graph events now come with their source Graph attached as an
        argument to the event method.
      o added test case and fixed resulting issues to ensure that .remove()
        on the iterator from find() generated a notifyDeleteTriple event.

  Reasoners
      o Added support for @prefix and @include to the Rule parser utility
      o Suppressed internal properties (rb:xsdRange etc) from leaking out of infmodel
      o Fix space leak in backward chainer
      o Added subProperty inheritance of domain/range values
      o Fixed validation of owl Functional properties to handle literals
      o Changed validation report of un-instantiatable classes to be warnings rather 
        than errors, report name is "Inconsistent class"
      o During validation the culprit resource is now made available via the error 
        report's getExtension method
      o Fixed bug in backward reasoner which caused it to occasionally miss 
        some results in non-deterministic ways
      o Fixed performance problem with listing all triples in a transitive reasoner
      o Fixed bug 927644, mishandling of cycles in transitive reasoner
      o Fixed ommission in handling of someValuesFrom applied to an rdfs:Datatype.
      o Fixed bug in hide() table not being carried across from prebuilt
        reasoner caches, which resulted in the prototypical instance of
        owl:Thing being visible in listIndividuals.
      o Fixed bug in TransitiveReasoner reported by wangxiao
      o Changed delete for RETE reasoner to be non-incremental to work around
        bug without demanding full reference counting
      o Added experimental OWLMini and OWLMicro reasoners

      o [kers] Added WrappedReasonerFactory class and RuleReasoner interface.
        Some tweaking to "implements" clauses. Refactored out some setRules
        code into FBRuleReasoner and BaseRuleReasonerFactory, to make it easy